# openclaw-exporter

./: .dockerignore  .gitignore  .golangci.yml  Dockerfile  LICENSE  Makefile  README.md  README.zh-TW.md  com.openclaw.exporter.plist.template  docker-compose.yml  generate_dashboard.py  go.mod  openclaw_exporter.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker-build-push.yml  release.yml  tests.yml
cmd/openclaw-exporter/: main.go
collector/: agent.go  collector.go  cron.go  token.go  workspace.go
deploy/: .env.example
deploy/grafana/dashboards/: openclaw-complete.json  system-monitor.json  token-usage.json
deploy/otel-collector/: config.yaml
deploy/prometheus/: rules.yml
grafana/dashboards/: openclaw-complete.json  openclaw-monitor.json  token-usage.json
internal/filereader/: filereader.go
openclaw_exporter/: __init__.py  __main__.py  collector.py  exporter.py  utils.py
prometheus/: prometheus.yml
scripts/: health-check.sh  setup.sh
