[project]
name = "openclaw-exporter"
version = "0.2.0"
description = "Prometheus exporter for OpenClaw AI agent metrics"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Sammy Lin" },
]

[project.urls]
Homepage = "https://github.com/nicholasgriffintn/openclaw"
Repository = "https://github.com/nicholasgriffintn/openclaw"

[project.scripts]
openclaw-exporter = "openclaw_exporter.exporter:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "prometheus-client>=0.20,<1.0",
]
